--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,6 +1,9 @@
-name: First Workflow
-on: workflow_dispatch
+name: Deploy
 
+on:
+  push:
+    branches:
+      - main
 jobs:
   first-job:
     runs-on: ubuntu-latest
@@ -13,27 +16,30 @@ jobs:
         run:  terraform -version
       - name: copy file
         run:  sudo cp "terraform"  "/usr/local/bin"  
-  terraform_init:
-     needs: first-job
-     runs-on: ubuntu-latest
-     steps:
-         - uses: actions/checkout@v1
-         - name: Terraform init
-           env:
-             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-           run: terraform init 
-           
-  terraform_validate:
-    needs: terraform_init
+  eks-deploy:
+    needs: first-job
     runs-on: ubuntu-latest
     steps:
-         - uses: actions/checkout@v1
-         - name: Terraform Validate
-           env:
-             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-           run: |
-              terraform init
-              terraform validate
-              terraform apply --auto-approve
+      - uses: actions/checkout@v2
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - name: npm install
+        working-directory: ./NEWGitHUB
+        env:
+          CI: true
+        run: |
+          pwd
+      - uses: hashicorp/setup-terraform@v2
+      - name: Terraform init
+        id: init
+        run: terraform init
+      - name: Terraform plan
+        id: plan
+        run: terraform plan
+      - name: Terraform apply
+        id: apply
+        run: terraform apply -auto-approve -input=false
