--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,7 +22,7 @@ jobs:
            env:
              AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-           run: terraform init 
+           run: terraform init -backend-config="access_key=AKIASMOGYMFMCQPGRLWF" -backend-config="secret_key=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" -backend-config="region=us-east-1" 
            
   terraform_validate:
     needs: terraform_init
