--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,7 +13,7 @@ jobs:
         run:  terraform -version
       - name: copy file
         run:  sudo cp "terraform"  "/usr/local/bin"  
-  terraform_init:
+  terraform_EKS_Deployment:
      needs: first-job
      runs-on: ubuntu-latest
      steps:
@@ -22,18 +22,7 @@ jobs:
            env:
              AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-           run: terraform init -backend-config="access_key=AKIASMOGYMFMCQPGRLWF" -backend-config="secret_key=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" -backend-config="region=us-east-1" 
-           
-  terraform_validate:
-    needs: terraform_init
-    runs-on: ubuntu-latest
-    steps:
-         - uses: actions/checkout@v1
-         - name: Terraform Validate
-           env:
-             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
            run: |
-              terraform init
-              terraform validate
-              terraform apply --auto-approve
+                terraform init -backend-config="access_key=AKIASMOGYMFMCQPGRLWF" -backend-config="secret_key=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" -backend-config="region=us-east-1" 
+                terraform validate
+                terraform apply --auto-approve
