--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -24,5 +24,5 @@ jobs:
              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
            run: |
                 terraform init -backend-config="access_key=AKIASMOGYMFMCQPGRLWF" -backend-config="secret_key=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" -backend-config="region=us-east-1" 
-                terraform validate
-                terraform apply --auto-approve
+                terraform validate -lock=false
+                terraform apply --auto-approve -lock=false
