--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,5 +23,5 @@ jobs:
              AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
            run: |
-                terraform init -backend-config="access_key=AWS_ACCESS_KEY_ID" -backend-config="secret_key=AWS_SECRET_ACCESS_KEY" -backend-config="region=us-east-1"
+                terraform init 
                 terraform apply --auto-approve 
