--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -24,4 +24,4 @@ jobs:
              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
            run: |
                 terraform init 
-                terraform apply --auto-approve 
+                terraform apply --auto-approve -lock=false
