--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,5 +23,4 @@ jobs:
              AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
            run: |
-                terraform init 
-                terraform apply --auto-approve -lock=false
+              run: echo AWS_SECRET_ACCESS_KEY
