--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,6 +22,8 @@ jobs:
            env:
              AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-             run: |
-                echo "$AWS_ACCESS_KEY_ID" 
-                echo "$AWS_SECRET_ACCESS_KEY"
+
+         - name: Terraform
+           run: |
+                terraform init 
+                terraform apply --auto-approve 
