--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,8 +22,6 @@ jobs:
            env:
              AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-         - name: Terraform
            run: |
                 terraform init 
-                terraform apply --auto-approve 
+                terraform apply --auto-approve -lock=false
