--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,5 +23,5 @@ jobs:
              AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
            run: |
-                echo "HI"
+                echo "$AWS_ACCESS_KEY_ID"
       
