--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -24,4 +24,6 @@ jobs:
              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
            run: |
                 echo "$AWS_ACCESS_KEY_ID"
+                terraform init
+                terraform apply -var "acess_key=AWS_ACCESS_KEY_ID" secret_key=AWS_SECRET_ACCESS_KEY
       
