--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,7 +22,8 @@ jobs:
            env:
              AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+             AWS_DEFAULT_REGION: 'us-east-1'
            run: |
                 echo "$AWS_ACCESS_KEY_ID"
-                terraform init -backend-config="access_key=AWS_ACCESS_KEY_ID" -backend-config="secret_key=AWS_SECRET_ACCESS_KEY"
+                terraform init 
       
