--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,13 +17,17 @@ jobs:
      needs: first-job
      runs-on: ubuntu-latest
      steps:
-         - uses: actions/checkout@v1
-         - name: Terraform init
-           env:
-             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-             AWS_DEFAULT_REGION: 'us-east-1'
-           run: |
-                echo "$AWS_ACCESS_KEY_ID"
-                terraform init 
-      
+          - uses: actions/checkout@v1
+          - name: Configure AWS Credentials
+            uses: aws-actions/configure-aws-credentials@v1
+            with:
+            aws-region: us-east-1
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          - name: Initialize Terraform
+            run: |
+              terraform init -input=false          
+          - name: Plan Terraform
+            id: plan
+            run: |
+              terraform plan -input=false -no-color  
