--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,34 +1,23 @@
-name: First Workflow
-on: workflow_dispatch
-
-jobs:
-  first-job:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download terraform
-        run: wget https://releases.hashicorp.com/terraform/1.5.2/terraform_1.5.2_linux_amd64.zip
-      - name: extract terraform
-        run: unzip terraform_1.5.2_linux_amd64.zip
-      - name: Find Version
-        run:  terraform -version
-      - name: copy file
-        run:  sudo cp "terraform"  "/usr/local/bin"  
-  terraform_EKS_Deployment:
-     needs: first-job
-     runs-on: ubuntu-latest
-     steps:
-          - uses: actions/checkout@v1
-          - name: Configure AWS Credentials
-            uses: aws-actions/configure-aws-credentials@v1
-            with:
-              aws-region: us-east-1
-              aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-              aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          - name: Initialize Terraform
-            run: |
-              terraform init -input=false  
-              terraform init -upgrade
-          - name: Plan Terraform
-            id: plan
-            run: |
-              terraform plan -input=false -no-color -lock=false
+name: "Terraform-Plan"
+  on:
+    push:
+        branches:
+            - main
+  jobs:
+    terraform:
+        name: "Terraform"
+        runs-on: ubuntu-latest
+        env:
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            aws-region: us-east-1
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v2
+            - name: Setup Terraform
+              uses: hashicorp/setup-terraform@v1
+            - name: Terraform Init
+              id: init
+              run: terraform init
+            - name: Terraform Plan
+              run: terraform plan -no-color
