--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -20,4 +20,4 @@ jobs:
             - name: Terraform Plan
               run: terraform plan -no-color
             - name: Terraform Apply
-              run: terraform apply --auto-approve -no-color
+              run: terraform apply --auto-approve -no-color -lock=false
