--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -18,6 +18,6 @@ jobs:
               id: init
               run: terraform init
             - name: Terraform Plan
-              run: terraform plan -no-color 
+              run: terraform plan -no-color -lock=false 
             - name: Terraform Apply
               run: terraform apply --auto-approve 
