--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -20,4 +20,4 @@ jobs:
             - name: Terraform Plan
               run: terraform plan -no-color 
             - name: Terraform destroy
-              run: terraform destroy --auto-approve 
+              run: terraform destroy --auto-approve -lock=false
