--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -18,6 +18,6 @@ jobs:
               id: init
               run: terraform init
             - name: Terraform Plan
-              run: terraform plan -no-color 
+              run: terraform plan -no-color -lock=false
             - name: Terraform destroy
               run: terraform destroy --auto-approve -lock=false
